- any gameobject with rigidbody collides with any gameobject with rigidbody component and they dont go through each other
- rigidbody gameobjects have linear and angular velocity
- rigidbody gameobjects have friction when colliding with other rigidbody gameobjects
- audio no longer "continues playing" if it has reached its end
- when assigning scene, texture, audio file or model the file hierarchy list now also shows file extension

0.1.3.0003:
- added collapsible headers to inspector
- added Enable/Disable physics button to the center of the top menu bar
- no longer forced to have CMake, Ninja and Visual Studio installed to open the engine
- a warning popup is created if user tries to compile or clean rebuild game if CMake, Ninja and Visual Studio are not installed and added to USER/SYSTEM path on windows
- a warning popup is created if user tries to run game which has not been created properly yet, removed the console error message for it
- reusing the Run function in compile.cpp to check for invalid paths after game is compiled
- fixed impulse and torque debug buttons
- fixed a bug that affected other non-rigidbodies if a rigidbody gameobject had its usegravity and isdynamic set to true

0.1.3.0004:
- small fix that allows moving, rotating and scaling rigidbody if isDynamic is true but physics simulation is off
- added modifyable gravity, angular damping, low angular velocity factor, friction multiplier, correction factor and minimum penetration factor to settings into physics tab and to scene file
- now displaying center of gravity in rigidbody component
- replaced default model and skybox textures
- can now set global ambient color and intensity in settings inside graphics tab, they are saved to scene file
- renamed settings other tab to game
- added missing rigidbody component that gets copied and pasted alongside gameobject and its other components
- overhauled scene file save and load system to be more similar to config file